# jdo

./: .gitignore  .status.md  AGENTS.md  CHANGELOG.md  FRC.yaml  README.md  ROADMAP.yaml  core-rules.md  core-rules.yaml  coverage.json  lessons-learned-textual.md  pyproject.toml  pyrightconfig.json  sonar-project.properties  v1-status.md  whitelizard.txt
.github/scripts/: ci-utils.sh
.github/workflows/: ci.yml
docs/: TESTING.md  textual-patterns.md
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 20251217_2b2f32bb1c9f_add_integrity_protocol.py  20251218_add_time_management.py
openspec/changes/add-ai-coaching-time-management/: proposal.md  tasks.md
openspec/changes/add-commitment-summary-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-conversational-tui/: proposal.md  tasks.md
openspec/changes/add-core-domain-models/: design.md  proposal.md  tasks.md
openspec/changes/add-dev-infrastructure/: proposal.md  tasks.md
openspec/changes/add-inbox-triage/: design.md  proposal.md  tasks.md
openspec/changes/add-integrity-protocol/: design.md  proposal.md  tasks.md
openspec/changes/add-navigation-sidebar/: design.md  proposal.md  tasks.md
openspec/changes/add-provider-auth/: tasks.md
openspec/changes/add-provider-auto-selection/: design.md  proposal.md  tasks.md
openspec/changes/add-recurring-commitments/: design.md  proposal.md  tasks.md
openspec/changes/add-testing-infrastructure/: proposal.md  tasks.md
openspec/changes/add-turso-cloud-sync/: design.md  proposal.md  tasks.md
openspec/changes/add-vision-milestone-hierarchy/: design.md  proposal.md  tasks.md
openspec/changes/enhance-dashboard-panels/: tasks.md
openspec/changes/enhance-visual-output/: design.md  proposal.md  tasks.md
openspec/changes/fix-navigation-and-review-textual/: tasks.md
openspec/changes/persist-handler-results/: design.md  proposal.md  tasks.md
openspec/changes/refactor-codebase-maintainability/: design.md  tasks.md
openspec/changes/refactor-core-libraries/: tasks.md
openspec/changes/update-goal-vision-focus/: tasks.md
openspec/changes/wire-ai-to-chat/: proposal.md
openspec/specs/ai-agent-credentials/: spec.md
openspec/specs/ai-conversation/: spec.md
openspec/specs/ai-provider/: spec.md
openspec/specs/ai-uat/: spec.md
openspec/specs/app-config/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/command-handlers/: spec.md
openspec/specs/commitment/: spec.md
openspec/specs/data-persistence/: spec.md
openspec/specs/goal/: spec.md
openspec/specs/inbox/: spec.md
openspec/specs/integrity/: spec.md
openspec/specs/jdo-app/: spec.md
openspec/specs/milestone/: spec.md
openspec/specs/output-formatting/: spec.md
openspec/specs/provider-auth/: spec.md
openspec/specs/recurring-commitment/: spec.md
openspec/specs/stakeholder/: spec.md
openspec/specs/task/: spec.md
openspec/specs/tui-chat/: spec.md
openspec/specs/tui-core/: spec.md
openspec/specs/tui-nav/: spec.md
openspec/specs/tui-views/: spec.md
openspec/specs/vision/: spec.md
src/jdo/: __init__.py  app.py  cli.py  exceptions.py  logging.py  observability.py  paths.py  retry.py
src/jdo/ai/: __init__.py  agent.py  context.py  dates.py  extraction.py  time_context.py  time_parsing.py  timeout.py  tools.py  triage.py
src/jdo/auth/: __init__.py  api.py  models.py  oauth.py  registry.py  screens.py  store.py
src/jdo/commands/: __init__.py  confirmation.py  draft_patch.py  handlers.py  parser.py
src/jdo/config/: __init__.py  settings.py
src/jdo/db/: __init__.py  engine.py  migrations.py  navigation.py  persistence.py  session.py  task_history_service.py  time_rollup_service.py
src/jdo/integrity/: __init__.py  service.py
src/jdo/models/: __init__.py  base.py  cleanup_plan.py  commitment.py  draft.py  goal.py  integrity_metrics.py  milestone.py  recurring_commitment.py  stakeholder.py  task.py  task_history.py  vision.py
src/jdo/output/: __init__.py  dashboard.py  formatters.py  goal.py  integrity.py  milestone.py  onboarding.py  task.py  triage.py  vision.py
src/jdo/recurrence/: __init__.py  calculator.py  formatter.py  generator.py
src/jdo/repl/: __init__.py  loop.py  session.py
src/jdo/screens/: __init__.py  ai_required.py  chat.py  draft_restore.py  home.py  main.py  settings.py
src/jdo/uat/: __init__.py  cleanup.py  harness.py
src/jdo/utils/: __init__.py  datetime.py
src/jdo/widgets/: __init__.py  chat_container.py  chat_message.py  data_panel.py  hierarchy_view.py  integrity_summary.py  nav_sidebar.py  prompt_input.py
tests/: conftest.py
tests/e2e/: conftest.py  test_app_lifecycle.py  test_live_ai.py
tests/integration/: __init__.py  conftest.py
tests/integration/db/: test_crud.py  test_migrations.py  test_persistence_service.py  test_recurring_workflows.py
tests/integration/tui/: __init__.py  test_flows.py
tests/output/: __init__.py  test_additional_formatters.py  test_dashboard.py  test_detail_panels.py  test_formatters.py  test_goal_formatters.py  test_integrity_formatters.py  test_milestone_formatters.py  test_onboarding.py  test_task_formatters.py  test_triage_formatters.py  test_vision_formatters.py
tests/repl/: __init__.py  test_ai_integration.py  test_confirmation.py  test_list_commitments.py  test_loop.py  test_loop_critical.py  test_session.py
tests/tui/: __init__.py  conftest.py  test_app.py  test_architecture.py  test_auth_screens.py  test_chat_screen.py  test_chat_widgets.py  test_data_panel.py  test_empty_states.py  test_error_handling.py  test_hierarchy_view.py  test_home_screen.py  test_nav_sidebar.py  test_nav_sidebar_integration.py  test_phase7_integration.py  test_settings_screen.py  test_snapshots.py
tests/tui/snapshot_apps/: __init__.py  cleanup_plan_app.py  (+7 more)
tests/uat/: __init__.py  conftest.py  driver.py  loader.py  mocks.py  models.py  observer.py  test_agent_behavior.py  test_live_scenarios.py  test_repl_display.py  test_scenarios.py
tests/unit/: __init__.py  test_cli.py  test_draft_patch.py  test_exceptions.py  test_logging.py  test_observability.py  test_retry.py
(+279 files in other folders)
