[project]
name = "jdo"
version = "0.1.0"
description = "A terminal application built with Textual"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.1",
    "rich>=13.9.4",
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "pydantic-ai>=0.1.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "sentry-sdk>=2.0.0",
    "alembic>=1.13.0",
]

[project.scripts]
jdo = "jdo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdo"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
    "lizard>=1.17.0",
]

# ------------------------------------------------------------------------------
# Ruff - Linting & Formatting (STRICT)
# ------------------------------------------------------------------------------
# Run after every change: uv run ruff check --fix src/ tests/ && uv run ruff format src/ tests/
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ALL",  # Enable all rules, then selectively ignore
]
ignore = [
    # Conflicts with formatter
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation (conflicts with formatter)
    # Project preferences (minimal exceptions)
    "TD",      # TODO comments format - we use simple TODOs
    "FIX",     # Fixme comments - allow during development
]
# Strict: Do NOT add noqa comments without documenting why in pyproject.toml
# Prefer per-file-ignores over inline noqa comments

[tool.ruff.lint.per-file-ignores]
# Tests have relaxed rules for readability and practicality
"tests/**/*.py" = [
    "S101",    # assert is the pytest way
    "S105",    # Fake tokens in tests
    "S106",    # Fake credentials in tests
    "ARG",     # Fixtures appear unused
    "PLR2004", # Magic values OK in tests
    "D",       # No docstrings needed
    "PLC0415", # Imports in functions for test isolation
    "PT012",   # Multi-statement pytest.raises OK
    "ANN",     # Type annotations optional in tests
    "DTZ",     # Naive datetime OK in tests
    "RET504",  # Extra assignment OK for clarity
    "SLF001",  # Private member access for testing
    "F401",    # Unused imports (fixtures)
    "F841",    # Unused variables OK in tests (setup, intermediate values)
    "RUF059",  # Unused unpacked variables
    "RUF012",  # ClassVar not needed in test helper classes
    "PERF401", # Async list comprehensions less readable in tests
    "TRY003",  # Long exception messages OK in tests for readability
    "EM101",   # String literals in exceptions OK in tests
]
# Source code - minimal exceptions, document each one
"src/**/*.py" = [
    "PLW0603", # Global statement needed for singleton pattern (engine, settings)
]
"src/jdo/auth/oauth.py" = [
    "S105",    # TOKEN_URL constant is not a secret
    "PLR2004", # HTTP status codes are self-documenting
    "TRY003",  # OAuth errors need descriptive messages
    "EM101",   # String literals in OAuth exceptions
    "EM102",   # f-strings in OAuth exceptions
]
"src/jdo/auth/screens.py" = [
    "RUF012",  # BINDINGS - Textual requires this exact pattern
    "FBT003",  # dismiss(True/False) - Textual API
]
"src/jdo/auth/store.py" = [
    "BLE001",  # Catching Exception for JSON parse failures is intentional
]
"src/jdo/widgets/**/*.py" = [
    "A002",    # 'id' parameter - Textual widget convention, cannot change
    "RUF012",  # BINDINGS/DEFAULT_CSS - Textual patterns
]
"src/jdo/screens/**/*.py" = [
    "A002",    # 'id' parameter - Textual widget convention, cannot change
    "RUF012",  # BINDINGS/DEFAULT_CSS - Textual patterns
    "FBT001",  # push_screen callbacks require positional bool - Textual API
    "BLE001",  # Catch Exception for database errors in _check_triage_count
]
"src/jdo/commands/handlers.py" = [
    "ARG002",  # Unused cmd/context args - handlers implement common interface
    "ANN401",  # Any for goal_id - accepts UUID or other ID types from context
    "RUF012",  # ClassVar for _ENTITY_MAP, _COMMAND_HELP - immutable at runtime
]
"src/jdo/cli.py" = [
    "PLC0415", # Lazy import of TUI to avoid loading when running CLI subcommands
]
"src/jdo/observability.py" = [
    "PLC0415", # Lazy import of JDOError to avoid circular import
]

[tool.ruff.lint.isort]
known-first-party = ["jdo"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ------------------------------------------------------------------------------
# Pyrefly - Type Checking (STRICT)
# ------------------------------------------------------------------------------
# Run after every change: uvx pyrefly check src/
# NOTE: pyrefly has known false positives with SQLModel/SQLAlchemy - check runtime if unsure
[tool.pyrefly]
python-version = "3.11.0"
project-includes = ["src"]

[tool.pyrefly.errors]
# All type errors are errors (strict mode)
missing-argument = "error"
unexpected-keyword = "error"
bad-return = "error"
bad-argument-type = "error"
bad-assignment = "error"
missing-import = "error"
unbound-name = "error"
missing-attribute = "error"
not-callable = "error"
invalid-annotation = "error"
unsupported-operation = "error"
# Warnings for gradual typing
redundant-cast = "warn"
unannotated-parameter = "warn"
unannotated-return = "warn"
implicit-any = "warn"
# Known pyrefly limitations with SQLModel/Textual/Rich
bad-override = false  # SQLModel __tablename__ pattern

# Sub-configs for files with known pyrefly false positives (verified working at runtime)
[[tool.pyrefly.sub-config]]
# SQLAlchemy column comparisons (.join), .in_(), .order_by() - pyrefly doesn't understand SQLModel column descriptors
matches = "src/jdo/ai/tools.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
missing-attribute = false

[[tool.pyrefly.sub-config]]
# Rich Text.append() with VisualType - pyrefly has incorrect type narrowing for Rich
matches = "src/jdo/widgets/chat_message.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
# len() on Optional value that's already been checked - pyrefly doesn't narrow correctly
matches = "src/jdo/commands/handlers.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
# f-string format in list.append() - pyrefly incorrectly flags LiteralString constraint
matches = "src/jdo/ai/extraction.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
# SQLAlchemy column comparisons (<=), .in_(), func.count() - pyrefly doesn't understand SQLModel column descriptors
matches = "src/jdo/db/session.py"
[tool.pyrefly.sub-config.errors]
missing-attribute = false
unsupported-operation = false
bad-argument-type = false

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, file system)",
    "tui: TUI tests (Textual Pilot-based)",
]

# ------------------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/jdo"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 70
show_missing = true
skip_covered = false

# ------------------------------------------------------------------------------
# Lizard - Cyclomatic Complexity Analysis
# ------------------------------------------------------------------------------
# Run: uv run lizard src/ -C 10 -L 50 -a 6 -w
# Thresholds:
#   -C 10: Max cyclomatic complexity per function
#   -L 50: Max lines of code per function
#   -a 6:  Max parameters per function
#   -w:    Show only warnings (functions exceeding thresholds)
